app/assets/stylesheets/miner.css.scss
// Place all the styles related to the Miner controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#miner {
  #summary #coin {
    display: table;
    width: 100%;

    td {
      width: 50%;
    }

    td:first-child {
      font-weight: bold;
    }
  }
    
  #summary #config,
  #devices .device,
  #pools .pool,
  #stats .stat,
  #usbstats .usbstat {
    display: table;
    width: 100%;

    td {
      width: 25%;
    }
  }

  #host-summary {
    td:first-child {
      font-weight: normal;
    }
  }
}

#manage-pools {
  input[type=text] {
    width: 300px;
  }
}

#miner_results {
  table {
    td {
      width: 50%;
    }

    td:first-child {
      font-weight: bold;
    }
  }
}

#overview-table {
  td {
    width: 25%;
  }
}

